--- a/index.css
+++ b/index.css
@@ -31,7 +31,7 @@ img{
 /* navbar konteynırı */
 
 header {
-  margin-bottom: -50px;
+  margin-bottom: 0px;
   display: flex;
   justify-content: flex-end;
   align-items: center;
@@ -41,6 +41,10 @@ header {
 
 
 /* navbar ve itemleri */
+
+/* #navbar-links .icon {
+  display: none;
+} */
 
 header li {
   list-style: none;
@@ -121,17 +125,20 @@ header a:hover {
 
 
 
-@media all and (max-width: 600px) {  
+@media screen and (max-width: 600px) {  
     
-  header {  
+    header {  
     flex-wrap: wrap;  
   }  
     
   header > li {  
     flex-basis: 50%;  
-  }
+  } 
+} 
 
-}
+
+
+
 
 @media all and (max-width: 400px) {  
   header > li {  
@@ -145,9 +152,14 @@ header a:hover {
 /* foto  */
 
 .CoverImg{
-    display: flex;
-    justify-content:center;
-    padding:55px;    
+    background-image: url(/images/k9.jpeg);
+    background-color: #cccccc;
+    height: 500px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;  
+    background-attachment: fixed;
+    
 }
 
 #CoverImgId{
@@ -158,28 +170,28 @@ header a:hover {
  
 /* ortadaki karakutu */
 
+.boxy{
+  position: absolute;
+  top: 30%;
+  left: 40%;
+  transform: translate(-30%, -40%);
+}
+
 .littlebox{
   border: 2px solid;
   color:grey;
   border-radius: 8px;
   padding: 0px 0px;
-  width: 500px;
-  height: 60px;
+  width: 1200px;
+  height: 200px;
   background-color:rgb(34, 33, 33);
-  position: flex;
-  margin-right:auto;
-}
-
-#search{
-  position: flex;
-  height: 35px;
-  width: 400px;
-  background-color: rgb(34, 33, 33);
 }
 
 #subbutton{
-  position: flex;
   border-radius: 3px;
+  margin-top: -142px;
+  margin-right:-250px;
+  text-align: center;
 }
 
 .littlebox-blackbox a{
@@ -187,20 +199,55 @@ header a:hover {
     font-size: 20px;
 }
 
+.search-container{
+  width: 900px;
+  height: 200px;
+}
 
- 
-  
+.fa{
+margin-right:10px;
+}
+
+#select-1{
+ margin-left:210px;
+ margin-top:15px;
+}
+
+#select-2{
+  margin-left:670px;
+  margin-top:-49px;
+}
+
+#select-3{
+  margin-left:30px;
+  margin-top:52px;
+  width: 250px;
+}
+
+#select-4{
+  margin-left:320px;
+  margin-top:-48px;
+  width: 250px;
+}
+
+
+#select-5{
+  margin-left:620px;
+  margin-top:-48px;
+  width: 250px;
+}
+
+
+#select-6{
+  margin-left:930px;
+  margin-top:-48px;
+  width: 250px;
+}
+
   /* Style the search box inside the navigation bar */
-  .littlebox input[type=text] {
-    padding: 6px;
-    margin-top: 8px;
-    font-size: 17px;
-    border: none;
-    color:rgb(9, 196, 108);
-  }
   
   .littlebox .search-container {
-    float: right;
+    float: left;
   }
 
   .littlebox .search-container button {
@@ -220,9 +267,61 @@ header a:hover {
     color:rgb(9, 196, 108);
     transition: all 0.5s ease 0s;
   }
+
   
+  select {
+    /* Reset Select */
+    appearance: none;
+    outline: 0;
+    border: 0;
+    box-shadow: none;
+    /* Personalize */
+    flex: 1;
+    padding: 0 1em;
+    color: rgb(9, 196, 108);
+    background-color: #293746;
+    background-image: none;
+    cursor: pointer;
+  }
+  /* Remove IE arrow */
+  select::-ms-expand {
+    display: none;
+  }
+  /* Custom Select wrapper */
+  .select {
+    position: relative;
+    display: flex;
+    width: 20em;
+    height: 3em;
+    border-radius: .25em;
+    overflow: hidden;
+  }
+  /* Arrow */
+  .select::after {
+    content: '\25BC';
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 1em;
+    background-color: #293746;
+    transition: .25s all ease;
+    pointer-events: none;
+    color:rgb(34, 33, 33);
+  }
+  /* Transition */
+  .select:hover::after {
+    color: rgb(9, 196, 108);
+  }
+
+
+
+
+
+
   
 
+
+/* explore kısmı */
 
 #ExploreCage{
   height: 180px;
@@ -238,7 +337,7 @@ header a:hover {
 
 #k5img{
      width:235px;
-     margin-bottom: 45px;
+     margin-bottom: -50px;
      border: 4px solid;
      border-radius: 0px;
      padding: 0px 0px;
@@ -248,7 +347,7 @@ header a:hover {
 
 #k1img{ 
      width:235px;
-     margin-bottom: 45px;
+     margin-bottom: -50px;
      border: 4px solid;
      border-radius: 0px;
      padding: 0px 0px;
@@ -258,7 +357,7 @@ header a:hover {
 
 #k15img{
      width:235px;
-     margin-bottom: 45px;
+     margin-bottom: -50px;
      border: 4px solid;
      border-radius: 0px;
      padding: 0px 0px;
@@ -268,7 +367,7 @@ header a:hover {
 
 #k10img{ 
      width:235px;
-     margin-bottom: 45px;
+     margin-bottom: -50px;
      border: 4px solid;
      border-radius: 0px;
      padding: 0px 0px;
@@ -278,7 +377,7 @@ header a:hover {
 
 #k2img{
      width:235px;
-     margin-bottom: 45px;
+     margin-bottom: -50px;
      border: 4px solid;
      border-radius: 0px;
      padding: 0px 0px;
@@ -415,6 +514,7 @@ html {
   --shadow-1: 0 5px 20px 0 hsla(219, 56%, 21%, 0.1);
   --shadow-2: 0 16px 32px hsl(200, 15%, 43%);
 
+  --gray: #1c2127;
 
   --orange-soda: hsl(9, 100%, 62%);
 
@@ -589,7 +689,7 @@ li { list-style: none; }
 \*-----------------------------------*/
 
 .footer {
-  background: var(--raisin-black-1);
+  background: var(--greyblack);
   color: var(--white);
   margin-bottom: 20px;
 }
@@ -646,7 +746,7 @@ li { list-style: none; }
 .footer-link:is(:hover, :focus) { color: var(--greeny); }
 
 .footer-bottom {
-  background: var(--raisin-black-2);
+  background: var(--gray);
   padding-block: 25px;
 }
 
