--- a/index.css
+++ b/index.css
@@ -5,6 +5,7 @@ body{
 
 a:link{
   text-decoration: none!important;
+  text-decoration: none;
 }
 
 .Navbar_Container a{
@@ -66,7 +67,7 @@ header a:hover {
 
 .NCRealEstateLogo{
   margin-right: auto;
-  width: 85px;
+  width: 88px;
   height: 80px;
   border-radius: 50px;
   clip-path: circle();
@@ -125,26 +126,7 @@ header a:hover {
 
 
 
-@media screen and (max-width: 600px) {  
-    
-    header {  
-    flex-wrap: wrap;  
-  }  
-    
-  header > li {  
-    flex-basis: 50%;  
-  } 
-} 
 
-
-
-
-
-@media all and (max-width: 400px) {  
-  header > li {  
-    flex-basis: 100%;  
-  }  
-}
 
 
 
@@ -173,8 +155,8 @@ header a:hover {
 .boxy{
   position: absolute;
   top: 30%;
-  left: 40%;
-  transform: translate(-30%, -40%);
+  left: 37%;
+  transform: translate(-30%, -37%);
 }
 
 .littlebox{
@@ -190,7 +172,7 @@ header a:hover {
 #subbutton{
   border-radius: 3px;
   margin-top: -142px;
-  margin-right:-250px;
+  margin-right:-220px;
   text-align: center;
 }
 
@@ -209,12 +191,12 @@ margin-right:10px;
 }
 
 #select-1{
- margin-left:210px;
+ margin-left:160px;
  margin-top:15px;
 }
 
 #select-2{
-  margin-left:670px;
+  margin-left:620px;
   margin-top:-49px;
 }
 
@@ -323,7 +305,7 @@ margin-right:10px;
 
 /* explore kısmı */
 
-#ExploreCage{
+/* #ExploreCage{
   height: 180px;
   position: relative;
   bottom: 10px;
@@ -479,7 +461,7 @@ margin-right:10px;
   
   margin-right: -23px;
   font-size: 17px;
-}
+} */
 
 
 
@@ -507,18 +489,24 @@ html {
 
   --white: hsl(0, 0%, 100%);
 
+  --dark-jungle-green: hsl(188, 63%, 7%);
+
   --greyblack:rgb(34, 33, 33);
 
   --greeny: rgb(36,156,76);
 
+  --alice-blue: hsl(210, 100%, 97%);
+
   --shadow-1: 0 5px 20px 0 hsla(219, 56%, 21%, 0.1);
-  --shadow-2: 0 16px 32px hsl(200, 15%, 43%);
+  --shadow-2: 0 8px 32px hsl(200, 15%, 43%);
 
   --gray: #1c2127;
 
   --orange-soda: hsl(9, 100%, 62%);
 
   --cadet: hsl(200, 15%, 43%);
+
+  --yellow-green: hsl(89, 72%, 45%);
 
   --fs-5: 0.875rem;
 
@@ -542,8 +530,17 @@ html {
 
   --ff-poppins: "Poppins", sans-serif;
 
-  
 }
+
+/*-----------------------------------*\
+  #(Tekrar)Kullanılacak Stayellar
+\*-----------------------------------*/
+
+
+
+.card-badge.green { background: var(--yellow-green); }
+
+.card-badge.red { background: red; }
 
 
 a,
@@ -551,6 +548,16 @@ img,
 span,
 button,
 ion-icon { display: block; }
+
+button {
+  border: none;
+  background: none;
+  font: inherit;
+  text-align: left;
+  cursor: pointer;
+}
+
+button, a { transition: var(--transition); }
 
 
 
@@ -572,6 +579,40 @@ ion-icon { display: block; }
 }
 
 
+.has-scrollbar {
+  display: flex;
+  align-items: flex-start;
+  gap: 15px;
+  overflow-x: auto;
+  margin-inline: -15px;
+  padding-inline: 15px;
+  scroll-padding-left: 15px;
+  padding-bottom: 60px;
+  scroll-snap-type: inline mandatory;
+}
+
+.has-scrollbar > li {
+  min-width: 100%;
+  scroll-snap-align: start;
+}
+
+.has-scrollbar::-webkit-scrollbar-track {
+  background: var(--cultured-2);
+  outline: 2px solid var(--cadet);
+  border-radius: 10px;
+}
+
+.has-scrollbar::-webkit-scrollbar-thumb {
+  background: var(--greeny);
+  border: 1px solid var(--cultured-2);
+  border-radius: 10px;
+}
+
+.has-scrollbar::-webkit-scrollbar-button { width: 15%; }
+
+.has-scrollbar > li { min-width: calc(33.33% - 16.66px); }
+
+
 
 
 
@@ -583,7 +624,7 @@ ion-icon { display: block; }
 
 
 
-.service-list > li { width: calc(32.40% - 20px); }
+/* .service-list > li { width: calc(32.40% - 20px); } */
 
 *, *::before, *::after {
   margin: 0;
@@ -644,6 +685,7 @@ li { list-style: none; }
   width:121px;
 }
 
+
 .service-card .card-title { margin-bottom: 15px; }
 
 .card-title { color: white;}
@@ -684,6 +726,212 @@ li { list-style: none; }
 
 
 
+
+/*-----------------------------------*\
+  #PROPERTY
+\*-----------------------------------*/
+
+.property { padding-block: var(--section-padding); }
+
+.property-card {
+  border: 1px solid var(--alice-blue);
+  box-shadow: var(--shadow-2);
+}
+
+.property-card .card-banner {
+  position: relative;
+  aspect-ratio: 2 / 1.5;
+  overflow: hidden;
+}
+
+.property-card .card-banner a { height: 100%; }
+
+.property-card .card-banner img {
+  height: 100%;
+  object-fit: cover;
+  transition: 0.5s ease;
+}
+
+.property-card:hover .card-banner img { transform: scale(1.1); }
+
+.property-card .card-banner::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background: linear-gradient(to top, hsla(0, 0%, 0%, 0.95), transparent 30%);
+  pointer-events: none;
+  z-index: 1;
+}
+
+.property-card .banner-actions {
+  position: absolute;
+  bottom: 15px;
+  left: 15px;
+  right: 15px;
+  display: flex;
+  flex-wrap: wrap-reverse;
+  align-items: center;
+  gap: 15px 10px;
+  z-index: 1;
+}
+
+.banner-actions-btn {
+  color: var(--white);
+  font-size: var(--fs-6);
+  line-height: 1;
+  display: flex;
+  align-items: flex-end;
+  gap: 4px;
+}
+
+
+.banner-actions-btn i { font-size: 12px; margin-right: 5px; }
+
+.banner-actions-btn:first-child { margin-right: auto; }
+
+.banner-actions-btn:is(:hover, :focus) { color: var(--greeny); }
+
+.property-card .card-content {
+  padding: 30px 15px 15px;
+  border-bottom: 1px solid rgb(36,156,76);
+}
+
+.card-price {
+  color: var(--greeny);
+  font-size: var(--fs-5);
+  margin-bottom: 5px;
+}
+
+.card-price strong {
+  font-size: var(--fs-4);
+  font-weight: var(--fw-600);
+}
+
+.property-card .card-title {
+  --font-weight: var(--fw-600);
+  margin-bottom: 15px;
+}
+
+.property-card .card-title a {
+  color:var(--white);
+  text-decoration: none;
+}
+
+.property-card .card-title > a:is(:hover, :focus) { color: var(--greeny); }
+
+.property-card .card-text {
+  color: var(--white);
+  font-size: var(--fs-5);
+  line-height: 1.8;
+  margin-bottom: 25px;
+}
+
+.property-card .card-list {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  row-gap: 15px;
+}
+
+.property-card .card-item {
+  padding-block: 5px;
+  color: var(--white);
+  font-size: var(--fs-5);
+}
+
+.property-card .card-item:not(:last-child) {
+  padding-right: 15px;
+  border-right: 1px solid hsla(0, 0%, 0%, 0.2);
+  margin-right: 20px;
+}
+
+.property-card .card-item :is(strong, .fa) { display: inline-block; }
+
+.property-card .card-item .fa {
+  margin-left: 2px;
+  margin-bottom: -2px;
+}
+
+.property-card .card-item span { margin-top: 5px; }
+
+.card-footer {
+  padding: 15px;
+  display: flex;
+  flex-wrap: wrap-reverse;
+  justify-content: space-between;
+  align-items: center;
+  gap: 15px;
+}
+
+.card-author {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.author-avatar {
+  width: 40px;
+  height: 40px;
+  overflow: hidden;
+  border-radius: 50%;
+}
+
+.author-name > a {
+  color: var(--white);
+  font-size: var(--fs-5);
+  font-weight: var(--fw-600);
+  margin-bottom: 3px;
+}
+
+.author-name > a:is(:hover, :focus) { color: var(--greeny); }
+
+.author-title {
+  color: var(--white);
+  font-size: var(--fs-7);
+}
+
+.card-footer-actions {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+/* .card-footer-actions i{
+  color:var(--greeny);
+} */
+
+.card-footer-actions-btn {
+  background: white;
+  color: var(--cadet);
+  width: 35px;
+  height: 35px;
+  display: grid;
+  place-items: center;
+  font-size: 18px;
+}
+
+.card-footer-actions-btn:is(:hover, :focus) {
+  background: var(--greeny);
+  color: var(--greyblack);
+}
+
+.card-badge {
+  background: var(--greyblack);
+  color: var(--white);
+  font-size: var(--fs-7);
+  text-transform: uppercase;
+  position: absolute;
+  top: 15px;
+  left: 15px;
+  padding: 4px 10px;
+}
+
+.property-card .card-content { padding-inline: 30px; }
+
+.card-footer { padding: 20px 30px 30px; }
+
+
+
 /*-----------------------------------*\
   #FOOTER
 \*-----------------------------------*/
@@ -705,7 +953,6 @@ li { list-style: none; }
 .footer-brand { margin-bottom: 0px; display: flex; justify-content: center; }
 
 .footer-brand .logo { margin-bottom: -30px; }
-
 
 .section-text {
   font-size: var(--fs-4);
@@ -732,7 +979,6 @@ li { list-style: none; }
 .footer-list:not(:last-child) { margin-bottom: 50px; }
 
 .footer-list-title {
-  font-family: var(--ff-poppins);
   font-size: var(--fs-3);
   font-weight: var(--fw-700);
   margin-bottom: 15px;
@@ -759,9 +1005,6 @@ li { list-style: none; }
 
 .copyright a:is(:hover, :focus) { color: var(--greeny); }
 
-/**
-   * FOOTER
-   */
 
    .footer-link-box {
     display: flex;
@@ -770,3 +1013,178 @@ li { list-style: none; }
   }
 
     .footer { margin-bottom: 0; }
+
+
+
+
+
+/*-----------------------------------*\
+   Media Querileri
+\*-----------------------------------*/
+
+
+
+@media  (max-width: 500px) {  
+  
+  
+  /* header */
+
+  header {  
+  flex-wrap: wrap;  
+}  
+
+header > li {  
+  flex-basis: 50%;  
+} 
+
+} 
+
+
+
+
+
+
+
+
+@media all and (max-width: 400px) {  
+header > li {  
+  flex-basis: 100%;  
+}  
+}
+
+
+
+
+@media (min-width: 600px) {
+  
+  /* property */
+  .property .container {
+    max-width: unset;
+    padding-inline: 25px;
+  }
+
+   /* service */
+  .service-list > li { width: calc(40% - 15px); }
+
+
+
+  /* reused style */
+  .container {
+    max-width: 550px;
+    margin-inline: auto;
+  }
+
+  .has-scrollbar {
+    gap: 25px;
+    margin-inline: -25px;
+    padding-inline: 25px;
+    scroll-padding-left: 25px;
+  }
+
+  .has-scrollbar > li { min-width: calc(50% - 12.5px); }
+
+  /* footer */
+  .footer-link-box {
+    display: flex;
+    justify-content: space-between;
+    gap: 10px;
+    
+  }
+  
+}
+
+
+
+@media (min-width: 768px) {
+
+  /* reused style */
+  .container { max-width: 720px; }
+
+  .btn {
+    --fs-5: 1rem;
+    padding: 12px 28px;
+  }
+
+      
+  /* footer */
+  .footer { margin-bottom: 0; }
+  
+
+ /* service */
+.features-list > li { width: calc(32.33% - 13.33px); }
+
+.features-card { gap: 20px; }
+
+.features-card .card-icon {
+  width: 80px;
+  height: 80px;
+  font-size: 32px;
+}
+
+.features-card .card-title { --fs-6: 1.125rem; }
+
+ }
+
+
+  
+  
+ 
+ @media (min-width: 992px) {
+
+  /* reused style */
+  .container { max-width: 970px; }
+
+  .btn { padding: 15px 40px; }
+    
+    
+  
+  /* property */
+    .property-card .card-content { padding-inline: 30px; }
+  
+    .card-footer { padding: 20px 30px 30px; }
+      
+
+  
+  
+    /* service */
+  .service-list > li { width: calc(32.33% - 20px); }
+
+
+  
+  
+  /* footer */
+
+  .footer-top .container {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .footer-brand {
+    max-width: 300px;
+    margin-bottom: 0;
+  }
+
+  .footer-link-box { flex-basis: 550px; }
+
+} 
+  
+  
+@media (min-width: 1200px) {
+
+  /* reused style */
+
+  .container { max-width: 1200px; }
+
+  .has-scrollbar > li { min-width: calc(33.33% - 16.66px); }
+
+  /* footer */
+  .footer { --fs-5: 1rem; }
+
+  .footer-link-box { flex-basis: 700px; }
+
+}
+  
+  
+  
+
+  
