--- a/index.css
+++ b/index.css
@@ -29,6 +29,263 @@ img{
 }
 
 
+/*-----------------------------------*\
+  #Rootcuk
+\*-----------------------------------*/
+
+html {
+  scroll-behavior: smooth;
+}
+
+
+:root{
+  --cultured-2: hsl(192, 24%, 96%);
+
+  --raisin-black-1: hsl(227, 29%, 13%);
+  --raisin-black-2: hsl(229, 17%, 19%);
+
+  --cultured-greyblack: rgb(34, 33, 33);
+
+  --section-padding: 100px;
+
+  --white: hsl(0, 0%, 100%);
+
+  --dark-jungle-green: hsl(188, 63%, 7%);
+
+  --greyblack:rgb(34, 33, 33);
+
+  --greeny: rgb(36,156,76);
+
+  --alice-blue: hsl(210, 100%, 97%);
+
+  --shadow-1: 0 5px 20px 0 hsla(219, 56%, 21%, 0.1);
+  --shadow-2: 0 8px 32px hsl(200, 15%, 43%);
+
+  --gray: #1c2127;
+
+  --orange-soda: hsl(9, 100%, 62%);
+
+  --cadet: hsl(200, 15%, 43%);
+
+  --yellow-green: hsl(89, 72%, 45%);
+
+  --fs-5: 0.875rem;
+
+  --opal: hsl(180, 20%, 62%);
+
+  --fw-600: 600;
+
+  --transition: 0.25s ease;
+
+  --fs-1: 1.875rem;
+  --fs-2: 1.5rem;
+  --fs-3: 1.375rem;
+  --fs-4: 1.125rem;
+  --fs-5: 0.875rem;
+  --fs-6: 0.813rem;
+  --fs-7: 0.75rem;
+
+  --fw-500: 500;
+  --fw-600: 600;
+  --fw-700: 700;
+
+  --ff-poppins: "Poppins", sans-serif;
+
+}
+
+/*-----------------------------------*\
+  #(Tekrar)Kullanılacak Stayellar
+\*-----------------------------------*/
+
+*, *::before, *::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+
+.card-badge.green { background: var(--yellow-green); }
+
+.card-badge.red { background: red; }
+
+
+a,
+img,
+span,
+button { display: block; }
+
+button {
+  border: none;
+  background: none;
+  font: inherit;
+  text-align: left;
+  cursor: pointer;
+}
+
+button, a { transition: var(--transition); }
+
+
+
+/*-----------------------------------*\
+  #Scrollbarcık
+\*-----------------------------------*/
+
+
+::-webkit-scrollbar {
+  width: 10px;
+  height: 8px;
+}
+
+::-webkit-scrollbar-track { background: var(--greyblack); }
+
+::-webkit-scrollbar-thumb {
+  background: var(--greeny);
+  border-left: 0px solid var(--white);
+}
+
+
+.has-scrollbar {
+  display: flex;
+  align-items: flex-start;
+  gap: 15px;
+  overflow-x: auto;
+  margin-inline: -15px;
+  padding-inline: 15px;
+  scroll-padding-left: 15px;
+  padding-bottom: 60px;
+  scroll-snap-type: inline mandatory;
+}
+
+.has-scrollbar > li {
+  min-width: 100%;
+  scroll-snap-align: start;
+}
+
+.has-scrollbar::-webkit-scrollbar-track {
+  background: var(--cultured-2);
+  outline: 2px solid var(--cadet);
+  border-radius: 10px;
+}
+
+.has-scrollbar::-webkit-scrollbar-thumb {
+  background: var(--greeny);
+  border: 1px solid var(--cultured-2);
+  border-radius: 10px;
+}
+
+.has-scrollbar::-webkit-scrollbar-button { width: 15%; }
+
+.has-scrollbar > li { min-width: calc(33.33% - 16.66px); }
+
+
+
+/* side navbar button */
+
+.sidenav {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: rgb(34, 33, 33);
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 60px;
+  z-index: 2;
+}
+
+.sidenav a {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: rgb(9, 196, 108);
+  display: block;
+  transition: 0.3s;
+}
+
+.sidenav a:hover {
+  color: #f1f1f1;
+}
+
+.sidenav .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+}
+
+
+
+#navbar-button{
+  color:rgb(9, 196, 108);
+}
+
+
+/* deneme */
+
+.sidenav2 {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: rgb(34, 33, 33);
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 00px;
+  z-index: 2;
+}
+
+.sidenav2 a {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: rgb(9, 196, 108);
+  display: block;
+  transition: 0.3s;
+}
+
+.sidenav2 a:hover {
+  color: #f1f1f1;
+}
+
+.sidenav2 .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 32px;
+  margin-left: 50px;
+}
+
+#main2 {
+  transition: margin-left .5s;
+  padding: 16px;
+}
+
+#navbar-button2{
+  font-size: 20px;
+  margin-top: 25px;
+  margin-right: 4rem;
+  border: 2px solid;
+  background-color: rgb(9, 196, 108);
+  border-radius: 4px;
+  padding: 5px 12px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* navbar konteynırı */
 
 header {
@@ -141,7 +398,9 @@ header a:hover {
     background-repeat: no-repeat;
     background-size: cover;  
     background-attachment: fixed;
-    
+    display:flex;
+    justify-content: center;
+    align-items: center;
 }
 
 #CoverImgId{
@@ -152,28 +411,33 @@ header a:hover {
  
 /* ortadaki karakutu */
 
-.boxy{
-  position: absolute;
-  top: 30%;
-  left: 37%;
-  transform: translate(-30%, -37%);
-}
+
 
 .littlebox{
+
   border: 2px solid;
   color:grey;
   border-radius: 8px;
   padding: 0px 0px;
   width: 1200px;
-  height: 200px;
+  height: 220px;
   background-color:rgb(34, 33, 33);
 }
 
 #subbutton{
   border-radius: 3px;
-  margin-top: -142px;
-  margin-right:-220px;
-  text-align: center;
+  /* margin-top: -142px;
+  margin-right:-220px; */
+}
+
+#subbutton2{
+  border-radius: 3px;
+  background-color: rgb(9, 196, 108);
+  padding: 5px 12px;
+  border-radius: 4px;
+  border: 2px solid;
+  margin-left: 150px;
+  margin-top: 30px;
 }
 
 .littlebox-blackbox a{
@@ -184,11 +448,19 @@ header a:hover {
 .search-container{
   width: 900px;
   height: 200px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .fa{
 margin-right:10px;
 }
+
+.fa .fa-search{
+  margin-right: 10px;
+}
+
 
 #select-1{
  margin-left:160px;
@@ -237,7 +509,7 @@ margin-right:10px;
     padding: 6px;
     margin-top: 8px;
     margin-right: 16px;
-    background: green;
+    background: rgb(9, 196, 108);
     font-size: 17px;
     border: none;
     cursor: pointer;
@@ -469,156 +741,6 @@ margin-right:10px;
 
 
 /*-----------------------------------*\
-  #Rootcuk
-\*-----------------------------------*/
-
-html {
-  scroll-behavior: smooth;
-}
-
-
-:root{
-  --cultured-2: hsl(192, 24%, 96%);
-
-  --raisin-black-1: hsl(227, 29%, 13%);
-  --raisin-black-2: hsl(229, 17%, 19%);
-
-  --cultured-greyblack: rgb(34, 33, 33);
-
-  --section-padding: 50px;
-
-  --white: hsl(0, 0%, 100%);
-
-  --dark-jungle-green: hsl(188, 63%, 7%);
-
-  --greyblack:rgb(34, 33, 33);
-
-  --greeny: rgb(36,156,76);
-
-  --alice-blue: hsl(210, 100%, 97%);
-
-  --shadow-1: 0 5px 20px 0 hsla(219, 56%, 21%, 0.1);
-  --shadow-2: 0 8px 32px hsl(200, 15%, 43%);
-
-  --gray: #1c2127;
-
-  --orange-soda: hsl(9, 100%, 62%);
-
-  --cadet: hsl(200, 15%, 43%);
-
-  --yellow-green: hsl(89, 72%, 45%);
-
-  --fs-5: 0.875rem;
-
-  --opal: hsl(180, 20%, 62%);
-
-  --fw-600: 600;
-
-  --transition: 0.25s ease;
-
-  --fs-1: 1.875rem;
-  --fs-2: 1.5rem;
-  --fs-3: 1.375rem;
-  --fs-4: 1.125rem;
-  --fs-5: 0.875rem;
-  --fs-6: 0.813rem;
-  --fs-7: 0.75rem;
-
-  --fw-500: 500;
-  --fw-600: 600;
-  --fw-700: 700;
-
-  --ff-poppins: "Poppins", sans-serif;
-
-}
-
-/*-----------------------------------*\
-  #(Tekrar)Kullanılacak Stayellar
-\*-----------------------------------*/
-
-
-
-.card-badge.green { background: var(--yellow-green); }
-
-.card-badge.red { background: red; }
-
-
-a,
-img,
-span,
-button,
-ion-icon { display: block; }
-
-button {
-  border: none;
-  background: none;
-  font: inherit;
-  text-align: left;
-  cursor: pointer;
-}
-
-button, a { transition: var(--transition); }
-
-
-
-/*-----------------------------------*\
-  #Scrollbarcık
-\*-----------------------------------*/
-
-
-::-webkit-scrollbar {
-  width: 10px;
-  height: 8px;
-}
-
-::-webkit-scrollbar-track { background: var(--greyblack); }
-
-::-webkit-scrollbar-thumb {
-  background: var(--greeny);
-  border-left: 0px solid var(--white);
-}
-
-
-.has-scrollbar {
-  display: flex;
-  align-items: flex-start;
-  gap: 15px;
-  overflow-x: auto;
-  margin-inline: -15px;
-  padding-inline: 15px;
-  scroll-padding-left: 15px;
-  padding-bottom: 60px;
-  scroll-snap-type: inline mandatory;
-}
-
-.has-scrollbar > li {
-  min-width: 100%;
-  scroll-snap-align: start;
-}
-
-.has-scrollbar::-webkit-scrollbar-track {
-  background: var(--cultured-2);
-  outline: 2px solid var(--cadet);
-  border-radius: 10px;
-}
-
-.has-scrollbar::-webkit-scrollbar-thumb {
-  background: var(--greeny);
-  border: 1px solid var(--cultured-2);
-  border-radius: 10px;
-}
-
-.has-scrollbar::-webkit-scrollbar-button { width: 15%; }
-
-.has-scrollbar > li { min-width: calc(33.33% - 16.66px); }
-
-
-
-
-
-
-
-/*-----------------------------------*\
   #SERVICE
 \*-----------------------------------*/
 
@@ -626,11 +748,6 @@ button, a { transition: var(--transition); }
 
 /* .service-list > li { width: calc(32.40% - 20px); } */
 
-*, *::before, *::after {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
 
 .container { padding-inline: 15px; }
 
@@ -1022,40 +1139,82 @@ li { list-style: none; }
    Media Querileri
 \*-----------------------------------*/
 
+ /* navbar-button */
+@media screen and (max-height: 450px) {
+  .sidenav {padding-top: 15px;}
+  .sidenav a {font-size: 18px;}
+}
 
 
-@media  (max-width: 500px) {  
+
+@media  (max-width: 599px) {  
   
   
   /* header */
 
-  header {  
+  /* header {  
   flex-wrap: wrap;  
 }  
 
 header > li {  
   flex-basis: 50%;  
-} 
+}  */
+
+ .navbar-linkz{
+  display:none;
+ }
+
+
+ .littlebox{
+  display:none;
+ }
+
+ .footer-link-box{
+  margin-left: -70px;
+ }
+
+ .service-list{
+  margin-left: -30px;
+ }
+
+
+ .main2{
+  margin-left: 40px;
+ }
+
+ .property .container {
+  max-width: unset;
+  padding-inline: 25px;
+}
+
 
 } 
 
 
-
-
-
-
-
-
-@media all and (max-width: 400px) {  
+/* @media all and (max-width: 400px) {  
 header > li {  
   flex-basis: 100%;  
 }  
-}
+} */
 
 
 
 
 @media (min-width: 600px) {
+
+  
+
+  .main2{
+    display: none;
+  }
+
+  :root{ --fs-2: 1.875rem; }
+
+
+  /* navbar-main */
+  .main{
+    display:none;
+  }
   
   /* property */
   .property .container {
@@ -1064,7 +1223,7 @@ header > li {
   }
 
    /* service */
-  .service-list > li { width: calc(40% - 15px); }
+  .service-list > li { width: calc(50% - 15px); }
 
 
 
@@ -1096,6 +1255,8 @@ header > li {
 
 
 @media (min-width: 768px) {
+
+  
 
   /* reused style */
   .container { max-width: 720px; }
@@ -1130,6 +1291,7 @@ header > li {
   
  
  @media (min-width: 992px) {
+  
 
   /* reused style */
   .container { max-width: 970px; }
